--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Age Industry</title>
   <style>
     body {
@@ -10,11 +10,17 @@
       padding: 0;
       font-family: Arial, sans-serif;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: white;
+      text-align: center;
+    }
+    img {
+      max-width: 200px;
+      margin-bottom: 20px;
     }
     h1 {
       font-size: 3rem;
@@ -22,6 +28,7 @@
   </style>
 </head>
 <body>
+  <img src="ageindustry.png" alt="Age Industry Logo" />
   <h1>Welcome to Age Industry</h1>
 </body>
 </html>
