--- a/index.html
+++ b/index.html
@@ -1,140 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Age Industry</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      font-family: 'Orbitron', sans-serif;
+      background: linear-gradient(120deg, #0d021f, #1c003d);
       color: white;
+      overflow-x: hidden;
     }
-    nav {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 10px 20px;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      text-align: left;
-      padding: 40px 20px;
-    }
-    .header {
+    header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      width: 100%;
-      padding: 20px;
+      padding: 20px 40px;
+      background: rgba(0, 0, 0, 0.3);
     }
-    .logo {
-      max-width: 120px;
+    header img {
+      max-height: 60px;
     }
-    .title {
-      font-size: 2.5rem;
+    nav a {
+      margin-left: 30px;
+      text-decoration: none;
+      color: white;
       font-weight: bold;
-      margin-left: auto;
-      text-align: right;
+      transition: color 0.3s;
     }
-    .about, .projects, form {
-      max-width: 800px;
-      width: 100%;
-      margin-top: 30px;
+    nav a:hover {
+      color: #a855f7;
     }
-    .about {
-      font-size: 1.2rem;
-      font-weight: bold;
+    .hero {
+      padding: 100px 40px 60px;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 3.5rem;
+      font-weight: 700;
+      color: #00ffff;
+      text-shadow: 0 0 20px #00ffff;
+    }
+    .hero p {
+      max-width: 600px;
+      margin: 20px auto;
+      font-weight: 500;
+    }
+    .projects {
+      padding: 60px 40px;
+      background: rgba(255, 255, 255, 0.05);
     }
     .projects h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
+      font-size: 2.5rem;
+      text-align: center;
+      margin-bottom: 40px;
+      color: #a855f7;
     }
-    .project-card {
-      background-color: rgba(255, 255, 255, 0.1);
+    .card {
+      background: rgba(0, 0, 0, 0.6);
       padding: 20px;
-      border-radius: 12px;
-      margin: 15px 0;
-      text-align: left;
+      border-radius: 16px;
+      margin: 20px auto;
+      max-width: 800px;
+      border: 1px solid #333;
     }
-    .project-card h3 {
+    .card h3 {
+      color: #00ffff;
+    }
+    .card p {
       font-weight: bold;
     }
-    .project-card p {
-      font-size: 1rem;
-      font-weight: bold;
-    }
-    button {
-      padding: 10px;
-      background-color: #00bcd4;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    input, textarea {
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-    @media (max-width: 600px) {
-      .title {
-        font-size: 1.5rem;
-        text-align: center;
-      }
+    footer {
+      text-align: center;
+      padding: 40px;
+      font-size: 0.9rem;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  <div class="container" id="home">
-    <div class="header">
-      <img src="ageindustry.png" alt="Age Industry Logo" class="logo">
-      <div class="title">Welcome to Age Industry</div>
+  <header>
+    <img src="logo.png" alt="Age Industry Logo">
+    <nav>
+      <a href="#">Home</a>
+      <a href="#projects">Projects</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Welcome to Age Industry</h1>
+    <p>Field-based innovation. Quantum communication. Intelligent propulsion. Age Industry is building the future of energy, defense, and interstellar motion.</p>
+  </section>
+
+  <section class="projects" id="projects">
+    <h2>Core Projects</h2>
+    <div class="card">
+      <h3>LEMON: Age Field Crystal Core</h3>
+      <p>A nonlinear crystal core generating scalar age gradients for computing, healing, and powering field systems.</p>
     </div>
-    <div class="about" id="about">
-      Age Industry is a visionary platform at the frontier of technology, focused on shaping the future through field-based innovation, quantum communication, and intelligent energy systems.
+    <div class="card">
+      <h3>Enigma QKD</h3>
+      <p>Quantum key distribution stabilized by age field harmonics. Designed for secure defense and satellite systems.</p>
     </div>
-    <div class="projects" id="projects">
-      <h2>Our Projects</h2>
-      <div class="project-card">
-        <h3>LEMON: The Age Field Crystal Core</h3>
-        <p>A nonlinear crystal device that demonstrates scalar age field effects for computing, healing, and field-powered light emission.</p>
-      </div>
-      <div class="project-card">
-        <h3>Enigma QKD</h3>
-        <p>Age-stabilized quantum key distribution using LiNbO₃ and BBO crystals. Real-world quantum-secure communication platform.</p>
-      </div>
-      <div class="project-card">
-        <h3>Raven Engine</h3>
-        <p>A vector age field propulsion unit designed to enable rapid interplanetary movement using field divergence and resonance thrust.</p>
-      </div>
+    <div class="card">
+      <h3>Raven Engine</h3>
+      <p>Age vector thrust engine enabling gravity-independent movement and warp-capable transitions.</p>
     </div>
-    <form name="contact" method="POST" data-netlify="true" id="contact">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Age Industry. All rights reserved.
+  </footer>
 </body>
 </html>
-
