--- a/index.html
+++ b/index.html
@@ -3,117 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Age Industry</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <title>Age Industry – Coming Soon</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(120deg, #0d021f, #1c003d);
-      color: white;
-      overflow-x: hidden;
-    }
-    header {
+      padding: 0;
+      background-color: #000;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
-      padding: 20px 40px;
-      background: rgba(0, 0, 0, 0.3);
+      height: 100vh;
     }
-    header img {
-      max-height: 60px;
+    .container {
+      max-width: 100%;
+      max-height: 100%;
+      overflow: hidden;
     }
-    nav a {
-      margin-left: 30px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-    nav a:hover {
-      color: #a855f7;
-    }
-    .hero {
-      padding: 100px 40px 60px;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 3.5rem;
-      font-weight: 700;
-      color: #00ffff;
-      text-shadow: 0 0 20px #00ffff;
-    }
-    .hero p {
-      max-width: 600px;
-      margin: 20px auto;
-      font-weight: 500;
-    }
-    .projects {
-      padding: 60px 40px;
-      background: rgba(255, 255, 255, 0.05);
-    }
-    .projects h2 {
-      font-size: 2.5rem;
-      text-align: center;
-      margin-bottom: 40px;
-      color: #a855f7;
-    }
-    .card {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      border-radius: 16px;
-      margin: 20px auto;
-      max-width: 800px;
-      border: 1px solid #333;
-    }
-    .card h3 {
-      color: #00ffff;
-    }
-    .card p {
-      font-weight: bold;
-    }
-    footer {
-      text-align: center;
-      padding: 40px;
-      font-size: 0.9rem;
-      color: #ccc;
+    .container img {
+      width: 100%;
+      height: auto;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Age Industry Logo">
-    <nav>
-      <a href="#">Home</a>
-      <a href="#projects">Projects</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h1>Welcome to Age Industry</h1>
-    <p>Field-based innovation. Quantum communication. Intelligent propulsion. Age Industry is building the future of energy, defense, and interstellar motion.</p>
-  </section>
-
-  <section class="projects" id="projects">
-    <h2>Core Projects</h2>
-    <div class="card">
-      <h3>LEMON: Age Field Crystal Core</h3>
-      <p>A nonlinear crystal core generating scalar age gradients for computing, healing, and powering field systems.</p>
-    </div>
-    <div class="card">
-      <h3>Enigma QKD</h3>
-      <p>Quantum key distribution stabilized by age field harmonics. Designed for secure defense and satellite systems.</p>
-    </div>
-    <div class="card">
-      <h3>Raven Engine</h3>
-      <p>Age vector thrust engine enabling gravity-independent movement and warp-capable transitions.</p>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 Age Industry. All rights reserved.
-  </footer>
+  <div class="container">
+    <img src="final-photo.jpg" alt="Age Industry Coming Soon Image">
+  </div>
 </body>
 </html>
