--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Age Industry – Coming Soon</title>
+  <title>AGE INDUSTRY</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      font-family: Arial, sans-serif;
     }
-    .container {
-      max-width: 100%;
-      max-height: 100%;
-      overflow: hidden;
-    }
-    .container img {
+    img {
       width: 100%;
       height: auto;
       display: block;
@@ -27,8 +19,6 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="ageindustryfinalphoto.png" alt="Age Industry Coming Soon">
-  </div>
+  <img src="ageindustryfinalphphoto.png" alt="AGE INDUSTRY">
 </body>
 </html>
