--- a/index.html
+++ b/index.html
@@ -11,14 +11,43 @@
       background-color: #000;
       font-family: Arial, sans-serif;
     }
+
     img {
       width: 100%;
       height: auto;
       display: block;
     }
+
+    .side-menu {
+      position: fixed;
+      top: 50%;
+      left: 15px;
+      transform: translateY(-50%);
+      z-index: 999;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .side-menu a img {
+      width: 34px;
+      height: 34px;
+      filter: drop-shadow(0px 0px 3px #fff);
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .side-menu a img:hover {
+      transform: scale(1.2);
+    }
   </style>
 </head>
 <body>
-  <img src="ageindustryfinalphphoto.png" alt="AGE INDUSTRY">
+  <div class="side-menu">
+    <a href="https://ageindustry.ca"><img src="https://img.icons8.com/ios-filled/50/ffffff/home.png" alt="Home" /></a>
+    <a href="/lemon-biochip.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/microscope.png" alt="Biochip" /></a>
+    <a href="mailto:contact@ageindustry.ca"><img src="https://img.icons8.com/ios-filled/50/ffffff/email.png" alt="Contact" /></a>
+  </div>
+
+  <img src="ageindustryfinalphphoto.png" alt="AGE INDUSTRY" />
 </body>
 </html>
