--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #0a1f0a;
-      background-image: url('BDDAAADA-3BD2-483D-A864-CBB58358D06A.jpeg'); /* optional background */
+      background-image: url('Carte Bio-Chip Citron sur Herbe.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
