--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('Carte Bio-Chip Citron sur Herbe.png');
+      background-image: url('biochip.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
