--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('biochip.png');
+      background-image: url('biochip.png'); /* Line 9 */
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -18,7 +17,7 @@
     }
 
     .contact-container {
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(0, 0, 0, 0.75);
       padding: 50px;
       max-width: 700px;
       margin: 80px auto;
