--- a/index.html
+++ b/index.html
@@ -42,12 +42,27 @@
   </style>
 </head>
 <body>
+
+  <!-- Side menu with icons -->
   <div class="side-menu">
-    <a href="https://ageindustry.ca"><img src="https://img.icons8.com/ios-filled/50/ffffff/home.png" alt="Home" /></a>
-    <a href="/lemon-biochip.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/microscope.png" alt="Biochip" /></a>
-    <a href="mailto:contact@ageindustry.ca"><img src="https://img.icons8.com/ios-filled/50/ffffff/email.png" alt="Contact" /></a>
+    <!-- Home Icon -->
+    <a href="https://ageindustry.ca">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/home.png" alt="Home" />
+    </a>
+
+    <!-- Lemon Biochip Icon -->
+    <a href="/lemon-biochip.html">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/microscope.png" alt="Biochip" />
+    </a>
+
+    <!-- Contact Icon - FIXED to go to contact.html -->
+    <a href="contact.html">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/email.png" alt="Contact" />
+    </a>
   </div>
 
+  <!-- Background Image -->
   <img src="ageindustryfinalphphoto.png" alt="AGE INDUSTRY" />
+
 </body>
 </html>
