--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('biochip.png'); /* THIS IS THE BACKGROUND */
+      background-image: url('biochip.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -55,8 +55,8 @@
   <div class="contact-container">
     <h1>Contact Us</h1>
     <p>Email: <a href="mailto:ceo@ageindustry.ca">ceo@ageindustry.ca</a></p>
-    <p>Phone: +1 (555) 123-4567</p>
-    <p>Location: Toronto, Ontario, Canada</p>
+    <p>Phone: +1 (647) 215-9977</p>
+    <p>Location: TORONTO, ONTARIO, CANADA</p>
 
     <a class="back" href="index.html">← Back to Home</a>
   </div>
