--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
       padding: 0;
       background-color: #000;
       font-family: Arial, sans-serif;
+      color: #fff;
     }
 
-    img {
+    img.full-bg {
       width: 100%;
       height: auto;
       display: block;
+      max-height: 70vh;
+      object-fit: cover;
     }
 
     .side-menu {
@@ -39,30 +42,87 @@
     .side-menu a img:hover {
       transform: scale(1.2);
     }
+
+    .content {
+      margin-left: 60px;
+      padding: 20px;
+      max-width: 800px;
+      margin-top: 70vh;
+    }
+
+    .content h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    .content p {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+
+    .lemon-biochip {
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 20px;
+      border-radius: 5px;
+      margin-top: 20px;
+    }
+
+    footer {
+      background-color: #333;
+      text-align: center;
+      padding: 10px;
+      position: relative;
+      margin-top: 20px;
+    }
+
+    @media (max-width: 600px) {
+      .side-menu {
+        top: 10px;
+        left: 10px;
+        transform: none;
+        flex-direction: row;
+        gap: 5px;
+      }
+      .content {
+        margin-left: 0;
+        margin-top: 50vh;
+      }
+      img.full-bg {
+        max-height: 50vh;
+      }
+    }
   </style>
 </head>
 <body>
-
   <!-- Side menu with icons -->
   <div class="side-menu">
-    <!-- Home Icon -->
     <a href="https://ageindustry.ca">
       <img src="https://img.icons8.com/ios-filled/50/ffffff/home.png" alt="Home" />
     </a>
-
-    <!-- Lemon Biochip Icon -->
     <a href="/lemon-biochip.html">
       <img src="https://img.icons8.com/ios-filled/50/ffffff/microscope.png" alt="Biochip" />
     </a>
-
-    <!-- Contact Icon - FIXED to go to contact.html -->
     <a href="contact.html">
       <img src="https://img.icons8.com/ios-filled/50/ffffff/email.png" alt="Contact" />
     </a>
   </div>
 
   <!-- Background Image -->
-  <img src="ageindustryfinalphphoto.png" alt="AGE INDUSTRY" />
+  <img src="ageindustryfinalphphoto.png" alt="AGE INDUSTRY" class="full-bg" />
 
+  <!-- Main Content -->
+  <div class="content">
+    <h1>AGE INDUSTRY</h1>
+    <p>Welcome to AGE INDUSTRY, where innovation meets agriculture. We are dedicated to advancing technology to support farmers and agribusinesses with cutting-edge solutions.</p>
+    
+    <div class="lemon-biochip">
+      <h2>Lemon Biochip</h2>
+      <p>Explore our Lemon Biochip, a revolutionary device designed to detect crop diseases and optimize soil health with precision. Stay updated on our progress and how it can benefit your farm!</p>
+    </div>
+  </div>
+
+  <footer>
+    <p>© 2025 AGE INDUSTRY. All rights reserved. | <a href="contact.html" style="color: #4CAF50;">Contact Us</a></p>
+  </footer>
 </body>
 </html>
