--- a/index.html
+++ b/index.html
@@ -1,128 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AGE INDUSTRY</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #000;
-      font-family: Arial, sans-serif;
-      color: #fff;
-    }
-
-    img.full-bg {
-      width: 100%;
-      height: auto;
-      display: block;
-      max-height: 70vh;
-      object-fit: cover;
-    }
-
-    .side-menu {
-      position: fixed;
-      top: 50%;
-      left: 15px;
-      transform: translateY(-50%);
-      z-index: 999;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .side-menu a img {
-      width: 34px;
-      height: 34px;
-      filter: drop-shadow(0px 0px 3px #fff);
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .side-menu a img:hover {
-      transform: scale(1.2);
-    }
-
-    .content {
-      margin-left: 60px;
-      padding: 20px;
-      max-width: 800px;
-      margin-top: 70vh;
-    }
-
-    .content h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-
-    .content p {
-      font-size: 1.1em;
-      line-height: 1.6;
-    }
-
-    .lemon-biochip {
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      border-radius: 5px;
-      margin-top: 20px;
-    }
-
-    footer {
-      background-color: #333;
-      text-align: center;
-      padding: 10px;
-      position: relative;
-      margin-top: 20px;
-    }
-
-    @media (max-width: 600px) {
-      .side-menu {
-        top: 10px;
-        left: 10px;
-        transform: none;
-        flex-direction: row;
-        gap: 5px;
-      }
-      .content {
-        margin-left: 0;
-        margin-top: 50vh;
-      }
-      img.full-bg {
-        max-height: 50vh;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lemon Biochip - Home</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
+        header { background-color: #4CAF50; color: white; text-align: center; padding: 1em; }
+        nav { background-color: #333; overflow: hidden; }
+        nav a { color: white; padding: 14px 16px; text-decoration: none; display: inline-block; }
+        nav a:hover { background-color: #ddd; color: black; }
+        .content { padding: 20px; max-width: 800px; margin: auto; }
+        footer { background-color: #333; color: white; text-align: center; padding: 10px; position: fixed; bottom: 0; width: 100%; }
+    </style>
 </head>
 <body>
-  <!-- Side menu with icons -->
-  <div class="side-menu">
-    <a href="https://ageindustry.ca">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/home.png" alt="Home" />
-    </a>
-    <a href="/lemon-biochip.html">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/microscope.png" alt="Biochip" />
-    </a>
-    <a href="contact.html">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/email.png" alt="Contact" />
-    </a>
-  </div>
-
-  <!-- Background Image -->
-  <img src="ageindustryfinalphphoto.png" alt="AGE INDUSTRY" class="full-bg" />
-
-  <!-- Main Content -->
-  <div class="content">
-    <h1>AGE INDUSTRY</h1>
-    <p>Welcome to AGE INDUSTRY, where innovation meets agriculture. We are dedicated to advancing technology to support farmers and agribusinesses with cutting-edge solutions.</p>
-    
-    <div class="lemon-biochip">
-      <h2>Lemon Biochip</h2>
-      <p>Explore our Lemon Biochip, a revolutionary device designed to detect crop diseases and optimize soil health with precision. Stay updated on our progress and how it can benefit your farm!</p>
+    <header>
+        <h1>Lemon Biochip</h1>
+        <p>Innovative Solutions for Agriculture</p>
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="content">
+        <h2>Welcome to Lemon Biochip</h2>
+        <p>Discover our cutting-edge biochip technology designed to detect crop diseases and enhance soil management with 90-97.5% accuracy. Perfect for Ontario farmers and beyond!</p>
+        <p>Stay tuned for updates on our research and development progress.</p>
     </div>
-  </div>
-
-  <footer>
-    <p>© 2025 AGE INDUSTRY. All rights reserved. | <a href="contact.html" style="color: #4CAF50;">Contact Us</a></p>
-  </footer>
-</body>
-</html>
+    <footer>
+        <p>&copy; 2025 Lemon Biochip. All rights reserved.</p>
+    </footer>
+    <script>
+        // Simple navigation highlight
+        document.querySelectorAll('nav a').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                document.querySelectorAll('nav a').forEach(a => a.classList.remove('active'));
+                this.classList.add('active');
+            });
+        });
+    </script>
