--- a/contact.html
+++ b/contact.html
@@ -48,18 +48,25 @@
       border-radius: 6px;
       color: #ffff66;
     }
+
+    @media (max-width: 600px) {
+      .contact-container {
+        margin: 40px auto;
+        padding: 20px;
+      }
+      h1 {
+        font-size: 1.5em;
+      }
+    }
   </style>
 </head>
 <body>
-
   <div class="contact-container">
     <h1>Contact Us</h1>
     <p>Email: <a href="mailto:ceo@ageindustry.ca">ceo@ageindustry.ca</a></p>
     <p>Phone: +1 (647) 215-9977</p>
     <p>Location: TORONTO, ONTARIO, CANADA</p>
-
     <a class="back" href="index.html">← Back to Home</a>
   </div>
-
 </body>
 </html>
