--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <p>Innovative Solutions for Agriculture</p>
     </header>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="lemon-biochip.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <div class="content">
         <h2>Welcome to Lemon Biochip</h2>
